--- a/public/output.css
+++ b/public/output.css
@@ -1,3 +1,28 @@
+.add-todo-input {
+  margin-left: auto;
+  margin-right: auto;
+  height: 2rem;
+  width: 60%;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  outline-style: solid;
+  outline-color: #3730a3;
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+  outline-width: 2.5px;
+  outline-offset: 2px;
+  transition: outline-offset 0.2s ease-out;
+}
+
+.add-todo-input:hover {
+  outline-offset: 6px;
+}
+
 .todo {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -7,11 +32,11 @@
   background-color: rgb(64 64 64 / var(--tw-bg-opacity));
   padding: 1rem;
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .completed {
   --tw-text-opacity: 1;
   color: rgb(161 161 170 / var(--tw-text-opacity));
-  text-decoration: line-through
+  text-decoration: line-through;
 }
