--- a/public/output.css
+++ b/public/output.css
@@ -1,8 +1,9 @@
 .add-todo-input {
+  grid-column: span 4 / span 4;
   margin-left: auto;
   margin-right: auto;
   height: 2rem;
-  width: 60%;
+  width: 100%;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
   background-color: rgb(64 64 64 / var(--tw-bg-opacity));
