--- a/style/input.css
+++ b/style/input.css
@@ -1,5 +1,5 @@
 .add-todo-input {
-  @apply mx-auto px-3 py-5 rounded-md bg-neutral-700 w-3/5 h-8 drop-shadow-lg outline outline-indigo-800;
+  @apply mx-auto px-3 py-5 rounded-md bg-neutral-700 w-full col-span-4 h-8 drop-shadow-lg outline outline-indigo-800;
 
   outline-width: 2.5px;
   outline-offset: 2px;
