--- a/public/output.css
+++ b/public/output.css
@@ -1,3 +1,43 @@
+main {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+@media (prefers-color-scheme: dark) {
+  main {
+    --tw-bg-opacity: 1;
+    background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+  }
+}
+
+@media (min-width: 640px) {
+  main {
+    width: 91.666667%;
+  }
+}
+
+@media (min-width: 768px) {
+  main {
+    width: 75%;
+  }
+}
+
+@media (min-width: 1024px) {
+  main {
+    width: 60%;
+  }
+}
+
 .add-todo-input {
   grid-column: span 4 / span 4;
   margin-left: auto;
